--- a/app/views/shared/_form_errors.html.erb
+++ b/app/views/shared/_form_errors.html.erb
@@ -1,5 +1,4 @@
-# Displays any and all errors 
-
+<!-- Displays any and all errors -->
 <% if object.errors.any? %>
     <ul>
         <% object.errors.full_messages.each do |message| %>
