--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -1,14 +1,17 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
+    <a class="navbar-brand" href="#">Student Website</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-            <%= link_to 'Log In', root_path, class:"nav-link active" %>
+          <a class="nav-link" href="#">Log In</a>
         </li>
         <li class="nav-item">
-            <%= link_to 'Sign Up', home_signup_path, class:"nav-link active" %>
+          <a class="nav-link" href="#">Sign Up</a>
         </li>
-      </ul>
     </div>
   </div>
 </nav>
