--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,10 @@
-<h1>Hello World!</h1>
+<%= stylesheet_link_tag "home" %>
+
+<div class="row">
+    <div class="col-4" id="side-panel">
+        <h1>Hello World!</h1>
+    </div>
+    <div class="col-8" id="main-panel">
+        <a>Welcome</a>
+    </div>
+</div>
