--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
   </head>
   <body>
   <%= render 'home/header' %>
-    <div class="container">
+    <div class="container-fluid">
       <%= yield %>
     </div>
 
