--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,9 +2,8 @@
 
 <div class="row">
     <div class="col-4" id="side-panel">
-        <h1>Hello World!</h1>
     </div>
     <div class="col-8" id="main-panel">
-        <a>Welcome</a>
+            <h1>Welcome</h1>
     </div>
 </div>
