--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,6 +4,8 @@
     <div class="col-4" id="side-panel">
     </div>
     <div class="col-8" id="main-panel">
-            <h1>Welcome</h1>
+        <div class="home_pic-container">
+            <%= image_tag("home/Student.jpg", alt: "Student in Classroom") %>
+        </div>
     </div>
 </div>
