--- a/app/views/home/_footer.html.erb
+++ b/app/views/home/_footer.html.erb
@@ -1,5 +1,5 @@
-<footer>
+<div class="container-fluid">
   <div class="mt-5 p-4 bg-dark text-white text-center">
     <p>Footer</p>
   </div>
-</footer>
+</div>
