--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,11 +1,11 @@
 <%= stylesheet_link_tag "home" %>
 
+<div class="contianer-fluid">
 <div class="row">
     <div class="col-4" id="side-panel">
     </div>
     <div class="col-8" id="main-panel">
-        <div class="home_pic-container">
-            <%= image_tag("home/Student.jpg", alt: "Student in Classroom") %>
-        </div>
+            <%= image_tag("home/Student.jpg", class: "home_image", alt: "Student in Classroom") %>
     </div>
+</div>
 </div>
